--- a/html/dungeon/road-to-the-end.html
+++ b/html/dungeon/road-to-the-end.html
@@ -691,7 +691,7 @@
           <h3 id="identify_equipment">Weapon + Shield</h3>
           <p>The name is already identified, but you won't know if it's cursed until you either equip it or fully identify it.<br>So it's best to wait to equip a weapon or shield until you find a Strip Trap, or until you reach a floor<br>where Kengo family monsters can be found.</p>
           <p>You can also check for curses or upgrade values by comparing prices inside a shop.<br>If the selling price is higher than the listed price, it has a positive upgrade value,<br>but if it's lower, it's either cursed or has a negative upgrade value.</p>
-          <p>See the <a href="">Price Chart</a> page for weapon and shield prices.</p>
+          <p>See the <a href="/shiren2/html/item/price-chart.html">Price Chart</a> page for weapon and shield prices.</p>
           <h3 id="identify_bracelet">Bracelet</h3>
           <dl>
             <dt>Price Identification</dt>
@@ -992,7 +992,7 @@
           <h3 id="identify_staff">Staff</h3>
           <p>Staves can be used to escape tricky situations, so identify them whenever you're able to do so.<br>It's best to swing them at a level 2 monster at least 2 tiles away so that you can<br>differentiate between Unlucky Staff, Quarter Staff, and Pull Staff.<br>It's also good to swing staves near the stairs so that you can run away if it happened to be a Happy Staff.</p>
           <p>A staff with the [Insert] menu option is either a Grass Tosser or Grass Gainer.<br>It's difficult to tell them apart, but Grass Gainer costs slightly more than Grass Tosser,<br>so you can try to identify which one it is by checking the price inside of a shop.<br>It's best to fully identify it before wasting one of its uses.</p>
-          <p>See the <a href="">Price Chart</a> page for staff prices.</p>
+          <p>See the <a href="/shiren2/html/item/price-chart.html">Price Chart</a> page for staff prices.</p>
           <h3 id="identify_scroll">Scroll</h3>
           <p>Shiren 2 doesn't have the negative effect scrolls like making you unable to pick up items<br>or increasing enemy movement speed which can be seen in some of the other games in the series.<br>However, you might find yourself surrounded by monsters if it happened to be a Wall Collapse Scroll,<br>so it's best to read scrolls after you've explored the current floor and have defeated some monsters.</p>
           <p>Wait until 9F to read unidentified scrolls in case you get lucky with a Wall Collapse Scroll and find a Golden Stairs.<br>If you find a shop, go ahead and read scrolls that aren't in the price range of a Wall Collapse Scroll.<br>Though you may want to keep 500G and 1000G scrolls on hand in case you run into a Monster House.</p>
