--- a/html/item/bracelets.html
+++ b/html/item/bracelets.html
@@ -809,7 +809,7 @@
               <h3 id="trapper_bracelet">Trapper Bracelet (ワナ師の腕輪)</h3>
               <div class="detail-entry">
                 <div class="detail-section1">
-                  <p class="item_desc">Lets you pick up and set traps, and monsters that step on traps will trigger them.<br>Cracks more easily than other bracelets. (See <a href="">durability values</a> for details)<br>Note that defeating a Trader using traps triggers thief mode.<br>Pair it with a Scout Bracelet to display all traps on the current floor on the map.<br>It's not mentioned in the description, but modifiers that lower attack and exp gain are applied like inside the "Halfway Well" dungeon while it's equipped.</p>
+                  <p class="item_desc">Lets you pick up and set traps, and monsters that step on traps will trigger them.<br>Cracks more easily than other bracelets. (See <a href="/shiren2/html/system/gameplay-basics.html#bracelet_durability">durability values</a> for details)<br>Note that defeating a Trader using traps triggers thief mode.<br>Pair it with a Scout Bracelet to display all traps on the current floor on the map.<br>It's not mentioned in the description, but modifiers that lower attack and exp gain are applied like inside the "Halfway Well" dungeon while it's equipped.</p>
                   <p>Locations:</p>
                   <ul>
                     <li>Halfway Well (Clear Reward)</li>
