--- a/html/system/allies.html
+++ b/html/system/allies.html
@@ -87,43 +87,43 @@
             </thead>
             <tbody>
               <tr>
-                <td><a href="">Boost Grass</a></td>
+                <td><a href="/shiren2/html/item/grass.html#boost_grass">Boost Grass</a></td>
                 <td>-</td>
               </tr>
               <tr>
-                <td><a href="">Swift Grass</a></td>
+                <td><a href="/shiren2/html/item/grass.html#swift_grass">Swift Grass</a></td>
                 <td>-</td>
               </tr>
               <tr>
-                <td><a href="">Herb</a></td>
+                <td><a href="/shiren2/html/item/grass.html#herb">Herb</a></td>
                 <td>Increases max HP if he is at full HP.</td>
               </tr>
               <tr>
-                <td><a href="">Otogiriso</a></td>
+                <td><a href="/shiren2/html/item/grass.html#otogiriso">Otogiriso</a></td>
                 <td>Increases max HP if he is at full HP.</td>
               </tr>
               <tr>
-                <td><a href="">Life Grass</a></td>
+                <td><a href="/shiren2/html/item/grass.html#life_grass">Life Grass</a></td>
                 <td>-</td>
               </tr>
               <tr>
-                <td><a href="">Strength Grass</a></td>
+                <td><a href="/shiren2/html/item/grass.html#strength_grass">Strength Grass</a></td>
                 <td>-</td>
               </tr>
               <tr>
-                <td><a href="">Happy Grass</a></td>
+                <td><a href="/shiren2/html/item/grass.html#happy_grass">Happy Grass</a></td>
                 <td>-</td>
               </tr>
               <tr>
-                <td><a href="">Angel Seed</a></td>
+                <td><a href="/shiren2/html/item/grass.html#angel_seed">Angel Seed</a></td>
                 <td>-</td>
               </tr>
               <tr>
-                <td><a href="">Dragon Grass</a></td>
+                <td><a href="/shiren2/html/item/grass.html#dragon_grass">Dragon Grass</a></td>
                 <td>Eats only when he can attack with fire breath.</td>
               </tr>
               <tr>
-                <td><a href="">Flame Grass</a></td>
+                <td><a href="/shiren2/html/item/grass.html#flame_grass">Flame Grass</a></td>
                 <td>Eats only when he can attack with fire breath.</td>
               </tr>
             </tbody>
