--- a/html/system/castle.html
+++ b/html/system/castle.html
@@ -194,9 +194,9 @@
           <p>As you build the castle and progress the story, Oni will begin to launch attacks on the castle.<br>The attack event itself is automatic, so there's no gameplay or fighting involved.<br>As a result of the attack, a castle section built using lower grade parts might be destroyed.<br>It's best to use higher grade castle parts so that you don't end up having to rebuild sections.</p>
           <p>On a side note, a Perfect grade castle material can be found after the first Oni attack at the castle site.</p>
           <h2 id="post_completion">Post-Completion</h2>
-          <p>Completing the castle grants access to <a href="">Onigashima</a>, and the ending plays after clearing that dungeon.<br>Once you enter post-game, a couple of new ways to interact with your castle become available.</p>
+          <p>Completing the castle grants access to <a href="/shiren2/html/dungeon/onigashima.html">Onigashima</a>, and the ending plays after clearing that dungeon.<br>Once you enter post-game, a couple of new ways to interact with your castle become available.</p>
           <h3 id="castle_decorations">Castle Decorations</h3>
-          <p>A variety of castle decorations can be obtained from post-game story events and dungeons.<br>Collecting these castle decorations and displaying them is part of the fun of post-game in Shiren 2.<br>See the <a href="">Castle Decorations</a> page for details on where to obtain each decoration.</p>
+          <p>A variety of castle decorations can be obtained from post-game story events and dungeons.<br>Collecting these castle decorations and displaying them is part of the fun of post-game in Shiren 2.<br>See the <a href="/shiren2/html/item/castle-decorations.html">Castle Decorations</a> page for details on where to obtain each decoration.</p>
           <h3 id="changing_parts">Changing Parts・Golden Castle</h3>
           <p>You'll be able to upgrade sections of your castle using higher grade castle parts.<br>See what happens when you build a Golden Castle by using Perfect grade castle parts for all sections.</p>
           <h3 id="quick_golden_castle">Quickly Building a Golden Castle</h3>
