--- a/html/system/statues.html
+++ b/html/system/statues.html
@@ -127,7 +127,7 @@
         <p>Statues can be moved using a Knockback Staff or Pull Staff, but Swap Staff doesn't have an effect on them.<br>Dosukoi family monsters can sometimes be seen pushing statues around as well.</p>
         <p>Enemies generally avoid attacking statues, but will attack them if the statue is blocking their path.<br>Piko Hammer family monsters will attempt to break statues in addition to visible traps.<br>Allies sometimes target statues if they were attacked by them, such as Ouch Statue or Stone Toss Statue.</p>
         <p>Statues are generally treated as items when being generated, so they can be commonly found on islands.<br>They can also be generated blocking room entrances, but monsters usually destroy those right away.<br>However, statues will never be generated inside a Monster House.</p>
-        <p>Lastly, an invisible and invincible statue can be generated under special conditions. (<a href="">glitches section</a>).</p>
+        <p>Lastly, an invisible and invincible statue can be generated under special conditions. (<a href="/shiren2/html/system/glitches.html#invisible_invincible_statue">glitches section</a>).</p>
         <h3>Statue Locations</h3>
         <table class="statue_location_table">
           <thead>
