--- a/html/system/synthesis-seals.html
+++ b/html/system/synthesis-seals.html
@@ -23,7 +23,7 @@
       <div id="sidebar" class="box sidebar"></div>
       <div id="content" class="box content">
         <h2 class="page_heading">Synthesis Seals</h2>
-        <p>Seals are special abilities that can be <a href="">synthesized</a> onto weapons or shields.</p>
+        <p>Seals are special abilities that can be <a href="/shiren2/html/system/gameplay-basics.html#synthesis">synthesized</a> onto weapons or shields.</p>
         <p>Each seal is represented as single Japanese character, and the color depends on the source item.<br>The three colors are: equipment (blue), food/grasses (green), and scrolls (red).<br>Some seals like 金 can be found in two colors, and have a slightly different effect based on color.</p>
         <p>Generally seals can make your adventure smoother, but some of them are a double-edged sword,<br>have a pointless effect, or have an outright negative effect, so some care is needed.</p>
         <p>
@@ -1899,7 +1899,7 @@
             <td class="seal_equipment">う</td>
             <td>×</td>
             <td>Scale Shield</td>
-            <td class="text_left">Blocks poison only from Poison Arrows, Poison Grass, and Scorpions.<br>In other words, it doesn't prevent Slug licks from lowering strength.<br>That said, Poison Traps are pretty common, so it's still an effective seal<br>especially inside <a href="">Road to the End</a> where strength matters a lot.</td>
+            <td class="text_left">Blocks poison only from Poison Arrows, Poison Grass, and Scorpions.<br>In other words, it doesn't prevent Slug licks from lowering strength.<br>That said, Poison Traps are pretty common, so it's still an effective seal<br>especially inside <a href="/shiren2/html/dungeon/road-to-the-end.html">Road to the End</a> where strength matters a lot.</td>
           </tr>
           <tr>
             <td class="seal_equipment">バ</td>
