--- a/html/system/traps.html
+++ b/html/system/traps.html
@@ -29,7 +29,7 @@
           <p>The "Break" column shows the chance of a trap breaking when Shiren has the trapper status<br>from either being inside the Halfway Well dungeon, or when he has a Trapper Bracelet equipped.</p>
           <p>Traps can be destroyed by splashing water on them from a Water Pot.<br>However, traps cannot be destroyed by explosions or the effect of a Flood Trap.<br>Traps thrown into water will vanish with the message "[Trap name] disappeared..."<br>Piko Hammer family monsters can destroy visible traps, and swinging a Knockback Staff<br>at a trap so that it hits a monster will deal a small amount of damage and make the trap vanish.</p>
           <p>Hidden traps cannot be detected by the [Ground] menu option,<br>but can still be destroyed by splashing water on them from a Water Pot.<br>Swinging a Mallet over a tile with a hidden trap will reveal the trap without destroying it,<br>and swinging the Mallet again over the visible trap will destroy the trap.<br>Hidden traps can be destroyed on the same turn using a Mallet if Shiren is under the effect of Sight Grass.</p>
-          <p>Damage dealt by traps increases as Shiren levels up when he has the Trapper status<br>from either being inside the Halfway Well dungeon, or by having a Trapper Bracelet equipped. (<a href="">Trap Damage</a>)<br>The "Dmg" column shows the amount of damage the trap deals when Shiren doesn't have the Trapper status.<br>Shiren's level is not a factor for the amount of damage a trap deals when Shiren doesn't have the Trapper status.</p>
+          <p>Damage dealt by traps increases as Shiren levels up when he has the Trapper status<br>from either being inside the Halfway Well dungeon, or by having a Trapper Bracelet equipped. (<a href="#trap_damage">Trap Damage</a>)<br>The "Dmg" column shows the amount of damage the trap deals when Shiren doesn't have the Trapper status.<br>Shiren's level is not a factor for the amount of damage a trap deals when Shiren doesn't have the Trapper status.</p>
         </div>
         <table class="table_traps">
           <tr>
@@ -215,7 +215,7 @@
             <td>15%</td>
           </tr>
         </table>
-        <h2 class="page_heading">Trap Damage</h2>
+        <h2 id="trap_damage" class="page_heading">Trap Damage</h2>
         <p>Trap damage scales with Shiren's level when he has the Trapper status.</p>
         <p>Key: Level, Droplet, Wooden Arrow, Burr, Iron Arrow, Rockfall, Rockslide, Trip Stone, Poison Arrow, Pitfall, Log.</p>
         <table class="table_trap_damage">
