use more semantic html tags

--- a/html/dungeon/onigashima.html
+++ b/html/dungeon/onigashima.html
@@ -14,13 +14,13 @@
   </head>
   <body>
     <div class="wrapper">
-      <div id="header" class="box header">
+      <header id="header" class="box header">
         <div>
           <a href="/shiren2/html/index.html"><img src="/shiren2/image/site/koppa_eating.png" width="28" height="auto" class="header-image"></a><h1><a href="/shiren2/html/index.html">Shiren 2 Wiki</a> / Onigashima</h1>
         </div>
-      </div>
-      <div id="sidebar" class="box sidebar"></div>
-      <div id="content" class="box content">
+      </header>
+      <nav id="sidebar" class="box sidebar"></nav>
+      <main id="content" class="box content">
         <div>
           <h2 class="dungeon_heading">Onigashima</h2>
           <div class="dungeon_desc">
@@ -2280,8 +2280,7 @@
           <h3 id="no_items_boss_oni">25F Boss Oni</h3>
           <p>Ideally you'll one-shot him by throwing a Storage Pot with 4500 or more Gitan inside.<br>However, if the pot misses, or you weren't able to find a Storage Pot, you'll have to rely on other items to take him down.<br>Use items such as Swift Grass and Decoy Scroll if you have to use regular attacks.<br>You could also place a Sanctuary Scroll down after luring him into a corner,<br>but note that he might burn it up with his fire attacks.</p>
         </div>
-      </div>
-      <div id="footer" class="box footer"></div>
+      </main>
     </div>
   </body>
 </html>
