--- a/html/index.html
+++ b/html/index.html
@@ -13,12 +13,12 @@
   </head>
   <body>
     <div class="wrapper">
-      <div id="header" class="box header">
+      <header id="header" class="box header">
         <div>
           <a href="/shiren2/html/index.html"><img src="/shiren2/image/site/koppa_eating.png" width="28" height="auto" class="header-image"></a><h1>Shiren the Wanderer 2: Oni Assault! Shiren Castle! Wiki</h1>
         </div>
-      </div>
-      <div id="sidebar" class="box sidebar">
+      </header>
+      <nav id="sidebar" class="box sidebar">
         <div class="sidebar-menu">
           <div class="sidebar-category">Items</div>
           <div class="sidebar-links">
@@ -91,16 +91,15 @@
             ┗ <a href="https://retroarch.com/index.php?page=platforms" target="_blank">RetroArch</a><br>
           </div>
         </div>
-      </div>
-      <div id="content" class="box content">
+      </nav>
+      <main id="content" class="box content">
         <div>
           <p>Welcome! This is a strategy / wiki site for Shiren the Wanderer 2 (Nintendo 64)<br>to accompany the English patch.</p>
           <p>It's a work-in-progress, so some pages don't have content yet, and others may change in time.<br>Feel free to follow the project <a href="https://krikzz.com/forum/index.php?topic=8495" target="_blank">here</a>.</p>
           <p>A significant portion of the information found on this site is hand-translated from the <a href="http://shiren2.lsx3.com" target="_blank">Japanese wiki</a>,<br>along with the addition of my own personal notes.</p>
           <p></p>
         </div>
-      </div>
-      <div id="footer" class="box footer"></div>
+      </main>
     </div>
   </body>
 </html>
