--- a/html/item/scrolls.html
+++ b/html/item/scrolls.html
@@ -14,13 +14,13 @@
   </head>
   <body>
     <div class="wrapper">
-      <div id="header" class="box header">
+      <header id="header" class="box header">
         <div>
           <a href="/shiren2/html/index.html"><img src="/shiren2/image/site/koppa_eating.png" width="28" height="auto" class="header-image"></a><h1><a href="/shiren2/html/index.html">Shiren 2 Wiki</a> / Scrolls</h1>
         </div>
-      </div>
-      <div id="sidebar" class="box sidebar"></div>
-      <div id="content" class="box content">
+      </header>
+      <nav id="sidebar" class="box sidebar"></nav>
+      <main id="content" class="box content">
         <div>
           <div id="item_summary_table">
             <h2 class="page_heading">Scroll Summary</h2>
@@ -1257,8 +1257,7 @@
             </div>
           </div>
         </div>
-      </div>
-      <div id="footer" class="box footer"></div>
+      </main>
     </div>
   </body>
 </html>
