--- a/html/playing/faq.html
+++ b/html/playing/faq.html
@@ -14,18 +14,17 @@
   </head>
   <body>
     <div class="wrapper">
-      <div id="header" class="box header">
+      <header id="header" class="box header">
         <div>
           <a href="/shiren2/html/index.html"><img src="/shiren2/image/site/koppa_eating.png" width="28" height="auto" class="header-image"></a><h1><a href="/shiren2/html/index.html">Shiren 2 Wiki</a> / FAQ</h1>
         </div>
-      </div>
-      <div id="sidebar" class="box sidebar"></div>
-      <div id="content" class="box content">
+      </header>
+      <nav id="sidebar" class="box sidebar"></nav>
+      <main id="content" class="box content">
         <div>
           <h2 class="page_heading">FAQ (Frequently Asked Questions)</h2>
         </div>
-      </div>
-      <div id="footer" class="box footer"></div>
+      </main>
     </div>
   </body>
 </html>
