--- a/html/system/castle.html
+++ b/html/system/castle.html
@@ -14,13 +14,13 @@
   </head>
   <body>
     <div class="wrapper">
-      <div id="header" class="box header">
+      <header id="header" class="box header">
         <div>
           <a href="/shiren2/html/index.html"><img src="/shiren2/image/site/koppa_eating.png" width="28" height="auto" class="header-image"></a><h1><a href="/shiren2/html/index.html">Shiren 2 Wiki</a> / Castle</h1>
         </div>
-      </div>
-      <div id="sidebar" class="box sidebar"></div>
-      <div id="content" class="box content">
+      </header>
+      <nav id="sidebar" class="box sidebar"></nav>
+      <main id="content" class="box content">
         <div>
           <h2 class="page_heading">Castle</h2>
           <p>As the story progresses, Shiren soon finds himself having to build a castle for the village.<br>Castle <a href="/shiren2/html/item/castle-materials.html">Materials</a> can be found throughout Shuten Mountain, and each category comes in three grades.</p>
@@ -231,8 +231,7 @@
           </dl>
           <p>It's possible to return to 11F in Shuten Trail Mid by using a Pitfall, so one way to quickly collect<br>Perfect Wood would be to bring a Trapper Bracelet and numerous Pitfalls to repeat 11~12F.</p>
         </div>
-      </div>
-      <div id="footer" class="box footer"></div>
+      </main>
     </div>
   </body>
 </html>
