--- a/html/system/synthesis-seals.html
+++ b/html/system/synthesis-seals.html
@@ -15,13 +15,13 @@
   </head>
   <body>
     <div class="wrapper">
-      <div id="header" class="box header">
+      <header id="header" class="box header">
         <div>
           <a href="/shiren2/html/index.html"><img src="/shiren2/image/site/koppa_eating.png" width="28" height="auto" class="header-image"></a><h1><a href="/shiren2/html/index.html">Shiren 2 Wiki</a> / Synthesis Seals</h1>
         </div>
-      </div>
-      <div id="sidebar" class="box sidebar"></div>
-      <div id="content" class="box content">
+      </header>
+      <nav id="sidebar" class="box sidebar"></nav>
+      <main id="content" class="box content">
         <h2 class="page_heading">Synthesis Seals</h2>
         <p>Seals are special abilities that can be <a href="/shiren2/html/system/gameplay-basics.html#synthesis">synthesized</a> onto weapons or shields.</p>
         <p>Each seal is represented as single Japanese character, and the color depends on the source item.<br>The three colors are: equipment (blue), food/grasses (green), and scrolls (red).<br>Some seals like 金 can be found in two colors, and have a slightly different effect based on color.</p>
@@ -1980,8 +1980,7 @@
             <td class="text_left">You lose the ability to synthesize using Mixer family monsters,<br>and the shield is permanently lost if it gets disarmed by a Kengo family monster.<br>No advantages for shields except for Halberd Shield.</td>
           </tr>
         </table>
-      </div>
-      <div id="footer" class="box footer"></div>
+      </main>
     </div>
   </body>
 </html>
