--- a/html/system/allies.html
+++ b/html/system/allies.html
@@ -14,13 +14,13 @@
   </head>
   <body>
     <div class="wrapper">
-      <div id="header" class="box header">
+      <header id="header" class="box header">
         <div>
           <a href="/shiren2/html/index.html"><img src="/shiren2/image/site/koppa_eating.png" width="28" height="auto" class="header-image"></a><h1><a href="/shiren2/html/index.html">Shiren 2 Wiki</a> / Allies</h1>
         </div>
-      </div>
-      <div id="sidebar" class="box sidebar"></div>
-      <div id="content" class="box content">
+      </header>
+      <nav id="sidebar" class="box sidebar"></nav>
+      <main id="content" class="box content">
         <div>
           <h2 class="page_heading">Shiren's Allies</h2>
           <p>Allies are NPC characters who fight monsters alongside Shiren.<br>Shiren 2 features five ally characters - Himakichi, Riku, Asuka, Kirara, and Mamo.<br>See the <a href="/shiren2/html/playing/story-progression.html">Story Progression</a> page to check requirements for each character becoming your ally.</p>
@@ -378,8 +378,7 @@
             </tbody>
           </table>
         </div>
-      </div>
-      <div id="footer" class="box footer"></div>
+      </main>
     </div>
   </body>
 </html>
