--- a/html/system/monster-kingdom.html
+++ b/html/system/monster-kingdom.html
@@ -14,13 +14,13 @@
   </head>
   <body>
     <div class="wrapper">
-      <div id="header" class="box header">
+      <header id="header" class="box header">
         <div>
           <a href="/shiren2/html/index.html"><img src="/shiren2/image/site/koppa_eating.png" width="28" height="auto" class="header-image"></a><h1><a href="/shiren2/html/index.html">Shiren 2 Wiki</a> / Monster Kingdom</h1>
         </div>
-      </div>
-      <div id="sidebar" class="box sidebar"></div>
-      <div id="content" class="box content">
+      </header>
+      <nav id="sidebar" class="box sidebar"></nav>
+      <main id="content" class="box content">
         <div>
           <h2 class="page_heading">Monster Kingdom</h2>
           <p>Text</p>
@@ -87,8 +87,8 @@
           <h3 id="if_you_complete_monster_kingdom">If you complete Monster Kingdom...</h3>
           <p>Text</p>
         </div>
-      </div>
-      <div id="footer" class="box footer"></div>
+      </main>
+
     </div>
   </body>
 </html>
