--- a/html/system/monsters.html
+++ b/html/system/monsters.html
@@ -14,13 +14,13 @@
   </head>
   <body>
     <div class="wrapper">
-      <div id="header" class="box header">
+      <header id="header" class="box header">
         <div>
           <a href="/shiren2/html/index.html"><img src="/shiren2/image/site/koppa_eating.png" width="28" height="auto" class="header-image"></a><h1><a href="/shiren2/html/index.html">Shiren 2 Wiki</a> / Monsters</h1>
         </div>
-      </div>
-      <div id="sidebar" class="box sidebar"></div>
-      <div id="content" class="box content">
+      </header>
+      <nav id="sidebar" class="box sidebar"></nav>
+      <main id="content" class="box content">
         <div>
           <h2 class="page_heading">Monsters</h2>
           <div id="monster_quick_links" class="monster_quick_links">
@@ -6846,8 +6846,7 @@
             </table>
           </div>
         </div>
-      </div>
-      <div id="footer" class="box footer"></div>
+      </main>
     </div>
   </body>
 </html>
