--- a/html/system/traps.html
+++ b/html/system/traps.html
@@ -15,13 +15,13 @@
   </head>
   <body>
     <div class="wrapper">
-      <div id="header" class="box header">
+      <header id="header" class="box header">
         <div>
           <a href="/shiren2/html/index.html"><img src="/shiren2/image/site/koppa_eating.png" width="28" height="auto" class="header-image"></a><h1><a href="/shiren2/html/index.html">Shiren 2 Wiki</a> / Traps</h1>
         </div>
-      </div>
-      <div id="sidebar" class="box sidebar"></div>
-      <div id="content" class="box content">
+      </header>
+      <nav id="sidebar" class="box sidebar"></nav>
+      <main id="content" class="box content">
         <h2 class="page_heading">Traps</h2>
         <div id="trap_explanation">
           <p>Traps are found on the ground, and activate when stepped on, or if an object is thrown or dropped on top of them.</p>
@@ -2737,8 +2737,7 @@
             <td>720.00</td>
           </tr>
         </table>
-      </div>
-      <div id="footer" class="box footer"></div>
+      </main>
     </div>
   </body>
 </html>
