added structure for more pages

--- a/html/playing/equipment-gallery.html
+++ b/html/playing/equipment-gallery.html
@@ -23,6 +23,13 @@
       <main id="content" class="box content">
         <div>
           <h2 class="page_heading">Equipment Gallery</h2>
+          <p>Text</p>
+          <h3 id="weapons">Weapons</h3>
+          <p>Text</p>
+          <p>Table</p>
+          <h3 id="shields">Shields</h3>
+          <p>Text</p>
+          <p>Table</p>
         </div>
       </main>
     </div>
