--- a/html/playing/exp-and-stats.html
+++ b/html/playing/exp-and-stats.html
@@ -23,6 +23,53 @@
       <main id="content" class="box content">
         <div>
           <h2 class="page_heading">Exp & Stats</h2>
+          <p>Text</p>
+          <ul id="quick_links" class="quick_links">
+            <li><a href="#experience_points">Experience Points</a></li>
+            <li><a href="#shiren_ally_stats">Shiren, Ally Stats</a></li>
+            <li><a href="#ndubba_stats">N'dubba Stats</a></li>
+            <li><a href="#reference">Reference</a>
+              <ul>
+                <li><a href="#high_exp_monsters">High Exp Monsters</a></li>
+                <li><a href="#leveling_up_enemies">Leveling Up Enemies</a></li>
+                <li><a href="#efficient_level_up_methods">Efficient Level Up Methods</a>
+                  <ul>
+                    <li><a href="#make_a_level_up_sword">Make a level up sword</a></li>
+                    <li><a href="#level_up_an_enemy">Level up an enemy</a></li>
+                    <li><a href="#make_a_happy_gain_staff">Make a Happy Gain Staff</a></li>
+                    <li><a href="#use_happy_grass">Use Happy Grass</a></li>
+                    <li><a href="#defeat_monsters_using_bellthoven">Defeat monsters using a Bellthoven</a></li>
+                  </ul>
+                </li>
+                <li><a href="#is_it_important_to_level_up">Is it important to level up?</a></li>
+              </ul>
+            </li>
+          </ul>
+          <h2 id="experience_points">Experience Points</h2>
+          <p>Table</p>
+          <h2 id="shiren_ally_stats">Shiren, Ally Stats</h2>
+          <p>Table</p>
+          <h2 id="ndubba_stats">N'dubba Stats</h2>
+          <p>Table</p>
+          <h2 id="reference">Reference</h2>
+          <h3 id="high_exp_monsters">High Exp Monsters</h3>
+          <p>Table</p>
+          <h3 id="leveling_up_enemies">Leveling Up Enemies</h3>
+          <p>Text</p>
+          <p>Table</p>
+          <h3 id="efficient_level_up_methods">Efficient Level Up Methods</h3>
+          <h4 id="make_a_level_up_sword">Make a level up sword</h4>
+          <p>Text</p>
+          <h4 id="level_up_an_enemy">Level up an enemy</h4>
+          <p>Text</p>
+          <h4 id="make_a_happy_gain_staff">Make a Happy Gain Staff</h4>
+          <p>Text</p>
+          <h4 id="use_happy_grass">Use Happy Grass</h4>
+          <p>Text</p>
+          <h4 id="defeat_monsters_using_bellthoven">Defeat monsters using a Bellthoven</h4>
+          <p>Text</p>
+          <h3 id="is_it_important_to_level_up">Is it important to level up?</h3>
+          <p>Text</p>
         </div>
       </main>
     </div>
