--- a/html/playing/faq.html
+++ b/html/playing/faq.html
@@ -22,7 +22,34 @@
       <nav id="sidebar" class="box sidebar"></nav>
       <main id="content" class="box content">
         <div>
-          <h2 class="page_heading">FAQ (Frequently Asked Questions)</h2>
+          <h2 class="page_heading">FAQ</h2>
+          <p>This page provides answers for frequently asked questions.</p>
+          <ul id="quick_links" class="quick_links">
+            <li><a href="">How do I play Shiren 2 in English?</a></li>
+            <li><a href="">Anything I should know before playing?</a></li>
+            <li><a href="">Does the 回 seal stack?</a></li>
+            <li><a href="">Does the 弟 seal stack?</a></li>
+            <li><a href="">Do seals need to be next to each other to stack?</a></li>
+            <li><a href="">Where can I find Perfect Wood?</a></li>
+            <li><a href="">What monster should I capture in Road to the End?</a></li>
+            <li><a href="">Do you lose upgrade values and seals when making Fiery Fuuma?</a></li>
+          </ul>
+          <h3 id="">How do I play Shiren 2 in English?</h3>
+          <p>The English Patch hasn't been released yet.<br>Keep on eye on the <a href="https://krikzz.com/forum/index.php?topic=8495">project thread</a> for the latest news regarding the patch.</p>
+          <h3 id="">Anything I should know before playing?</h3>
+          <p>Text</p>
+          <h3 id="">Does the 回 seal stack?</h3>
+          <p>Text</p>
+          <h3 id="">Does the 弟 seal stack?</h3>
+          <p>Text</p>
+          <h3 id="">Do seals need to be next to each other to stack?</h3>
+          <p>Text</p>
+          <h3 id="">Where can I find Perfect Wood?</h3>
+          <p>Text</p>
+          <h3 id="">What monster should I capture in Road to the End?</h3>
+          <p>Text</p>
+          <h3 id="">Do you lose upgrade values and seals when making Fiery Fuuma?</h3>
+          <p>Text</p>
         </div>
       </main>
     </div>
