--- a/html/playing/secret-phrases.html
+++ b/html/playing/secret-phrases.html
@@ -23,6 +23,8 @@
       <main id="content" class="box content">
         <div>
           <h2 class="page_heading">Secret Phrases</h2>
+          <p>Text</p>
+          <p>Table</p>
         </div>
       </main>
     </div>
