added structure for restricted-play.html

--- a/html/playing/restricted-play.html
+++ b/html/playing/restricted-play.html
@@ -23,6 +23,100 @@
       <main id="content" class="box content">
         <div>
           <h2 class="page_heading">Restricted Play</h2>
+          <p>Text</p>
+          <ul id="quick_links" class="quick_links">
+            <li><a href="#onigashima">Onigashima</a>
+              <ul>
+                <li><a href="#no_carry_in_items">No Carry-In Items</a></li>
+                <li><a href="#onigashima_time_attack">Onigashima TA (Time Attack)</a></li>
+                <li><a href="#onigashima_time_attack_strict">Onigashima TA Strict (Time Attack)</a></li>
+                <li><a href="#onigashima_picnic">Onigashima Picnic (All Allies)</a></li>
+              </ul>
+            </li>
+            <li><a href="#sealed_room">Sealed Room</a>
+              <ul>
+                <li><a href="#shuten_tail_challenge">Shuten Trail Challenge</a></li>
+                <li><a href="#onigashima_or_road_to_the_end_challenge">Onigashima or Road to the End Challenge</a></li>
+                <li><a href="#99f_with_allies">99F with Allies</a></li>
+                <li><a href="#99f_11_monster_pots">99F with 11 Monster Pots</a></li>
+                <li><a href="#99f_disaster_seed_equipment">99F with Disaster Seed equipment</a></li>
+                <li><a href="#99f_presto_pot_challenge">99F Presto Pot Challenge</a></li>
+              </ul>
+            </li>
+            <li><a href="#shrines_hidden_hole">Shrine's Hidden Hole</a>
+              <ul>
+                <li><a href="#no_armordillo_family_monsters">No Armordillo Family Monsters</a></li>
+                <li><a href="#no_powerful_special_ability_monsters">No Powerful Special Ability Monsters</a></li>
+                <li><a href="#level_1_monsters_only">Level 1 Monsters Only</a></li>
+              </ul>
+            </li>
+            <li><a href="halfway_well">Halfway Well</a>
+              <ul>
+                <li><a href="#no_storage_pots">No Storage Pots</a></li>
+              </ul>
+            </li>
+            <li><a href="road_to_the_end">Road to the End</a>
+              <ul>
+                <li><a href="#no_mixer_synthesis">No Mixer Synthesis (No Synthesis)</a></li>
+                <li><a href="#no_items_category">No Items (Category)</a></li>
+                <li><a href="#no_items_specific">No Items (Specific Items)</a></li>
+                <li><a href="#no_using_certain_techniques">No Using Certain Techniques</a></li>
+                <li><a href="#two_handed_equipment_only">Two-Handed Equipment Only</a></li>
+                <li><a href="#no_shops_traders">No Shops・Traders</a></li>
+                <li><a href="#high_score_challenge">High Score Challenge</a></li>
+                <li><a href="#time_attack">Time Attack</a></li>
+              </ul>
+            </li>
+          </ul>
+          <h2 id="onigashima">Onigashima</h2>
+          <h3 id="no_carry_in_items">No Carry-In Items</h3>
+          <p>Text</p>
+          <h3 id="onigashima_time_attack">Onigashima TA (Time Attack)</h3>
+          <p>Text</p>
+          <h3 id="onigashima_time_attack_strict">Onigashima TA Strict (Time Attack)</h3>
+          <p>Text</p>
+          <h3 id="onigashima_picnic">Onigashima Picnic (All Allies)</h3>
+          <p>Text</p>
+          <h2 id="sealed_room">Sealed Room</h2>
+          <h3 id="shuten_tail_challenge">Shuten Trail Challenge</h3>
+          <p>Text</p>
+          <h3 id="onigashima_or_road_to_the_end_challenge">Onigashima or Road to the End Challenge</h3>
+          <p>Text</p>
+          <h3 id="99f_with_allies">99F with Allies</h3>
+          <p>Text</p>
+          <h3 id="99f_11_monster_pots">99F with 11 Monster Pots</h3>
+          <p>Text</p>
+          <h3 id="99f_disaster_seed_equipment">99F with Disaster Seed equipment</h3>
+          <p>Text</p>
+          <h3 id="99f_presto_pot_challenge">99F Presto Pot Challenge</h3>
+          <p>Text</p>
+          <h2 id="shrines_hidden_hole">Shrine's Hidden Hole</h2>
+          <h3 id="no_armordillo_family_monsters">No Armordillo Family Monsters</h3>
+          <p>Text</p>
+          <h3 id="no_powerful_special_ability_monsters">No Powerful Special Ability Monsters</h3>
+          <p>Text</p>
+          <h3 id="level_1_monsters_only">Level 1 Monsters Only</h3>
+          <p>Text</p>
+          <h2 id="halfway_well">Halfway Well</h2>
+          <h3 id="no_storage_pots">No Storage Pots</h3>
+          <p>Text</p>
+          <h2 id="road_to_the_end">Road to the End</h2>
+          <h3 id="no_mixer_synthesis">No Mixer Synthesis (No Synthesis)</h3>
+          <p>Text</p>
+          <h3 id="no_items_category">No Items (Category)</h3>
+          <p>Text</p>
+          <h3 id="no_items_specific">No Items (Specific Items)</h3>
+          <p>Text</p>
+          <h3 id="no_using_certain_techniques">No Using Certain Techniques</h3>
+          <p>Text</p>
+          <h3 id="two_handed_equipment_only">Two-Handed Equipment Only</h3>
+          <p>Text</p>
+          <h3 id="no_shops_traders">No Shops・Traders</h3>
+          <p>Text</p>
+          <h3 id="high_score_challenge">High Score Challenge</h3>
+          <p>Text</p>
+          <h3 id="time_attack">Time Attack</h3>
+          <p>Text</p>
         </div>
       </main>
     </div>
