--- a/html/playing/story-progression.html
+++ b/html/playing/story-progression.html
@@ -23,6 +23,72 @@
       <main id="content" class="box content">
         <div>
           <h2 class="page_heading">Story Progression</h2>
+          <ul id="quick_links" class="quick_links">
+            <li><a href="#story">Story</a></li>
+            <li><a href="#characters">Characters</a>
+              <ul>
+                <li><a href="#shiren">Shiren</a></li>
+                <li><a href="#koppa">Koppa</a></li>
+                <li><a href="#himakichi">Himakichi</a></li>
+                <li><a href="#riku">Riku</a></li>
+                <li><a href="#asuka">Asuka</a></li>
+                <li><a href="#kirara">Kirara</a></li>
+                <li><a href="#mamo">Mamo</a></li>
+              </ul>
+            </li>
+            <li><a href="#main_story">Main Story</a>
+              <ul>
+                <li><a href="#small_valley">Small Valley</a></li>
+                <li><a href="#shuten_trail_easy">Shuten Trail Easy</a></li>
+                <li><a href="#shuten_trail_mid">Shuten Trail Mid</a></li>
+                <li><a href="#shuten_trail_hard">Shuten Trail Hard</a></li>
+                <li><a href="#until_castle_completion">Until Castle Completion</a>
+                  <ul>
+                    <li><a href="#castle_part_events">Castle Part Events</a></li>
+                    <li><a href="#allies_joining_requirements">Allies Joining Requirements</a></li>
+                  </ul>
+                </li>
+                <li><a href="#onigashima">Onigashima</a></li>
+              </ul>
+            </li>
+            <li><a href="#post_game">Post-Game</a></li>
+          </ul>
+          <h2 id="story">Story</h2>
+          <p>Text</p>
+          <h2 id="characters">Characters</h2>
+          <h3 id="shiren">Shiren</h3>
+          <p>Text</p>
+          <h3 id="koppa">Koppa</h3>
+          <p>Text</p>
+          <h3 id="himakichi">Himakichi</h3>
+          <p>Text</p>
+          <h3 id="riku">Riku</h3>
+          <p>Text</p>
+          <h3 id="asuka">Asuka</h3>
+          <p>Text</p>
+          <h3 id="kirara">Kirara</h3>
+          <p>Text</p>
+          <h3 id="mamo">Mamo</h3>
+          <p>Text</p>
+          <h2 id="main_story">Main Story</h2>
+          <h3 id="small_valley"><a href="/shiren2/html/dungeon/small-valley.html">Small Valley</a></h3>
+          <p>Text</p>
+          <h3 id="shuten_trail_easy"><a href="/shiren2/html/dungeon/shuten-trail-easy.html">Shuten Trail Easy</a></h3>
+          <p>Text</p>
+          <h3 id="shuten_trail_mid"><a href="/shiren2/html/dungeon/shuten-trail-mid.html">Shuten Trail Mid</a></h3>
+          <p>Text</p>
+          <h3 id="shuten_trail_hard"><a href="/shiren2/html/dungeon/shuten-trail-hard.html">Shuten Trail Hard</a></h3>
+          <p>Text</p>
+          <h3 id="until_castle_completion">Until Castle Completion</h3>
+          <p>Text</p>
+          <h4 id="castle_part_events">Castle Part Events</h4>
+          <p>Table</p>
+          <h4 id="allies_joining_requirements">Allies Joining Requirements</h4>
+          <p>Text</p>
+          <h3 id="onigashima"><a href="/shiren2/html/dungeon/onigashima.html">Onigashima</a></h3>
+          <p>Text</p>
+          <h2 id="post_game">Post-Game</h2>
+          <p>Text</p>
         </div>
       </main>
     </div>
