added structure to stealing-techniques.html

--- a/html/playing/stealing-techniques.html
+++ b/html/playing/stealing-techniques.html
@@ -23,6 +23,53 @@
       <main id="content" class="box content">
         <div>
           <h2 class="page_heading">Stealing Techniques</h2>
+          <ul id="quick_links" class="quick_links">
+            <li><a href="thief_mode">Thief Mode</a></li>
+            <li><a href="before_stealing">Before Stealing</a></li>
+            <li><a href="steal_from_a_shop">Steal from a Shop</a></li>
+            <li><a href="steal_from_a_trader">Steal from a Trader</a></li>
+            <li><a href="things_that_can_be_used_to_steal">Things that can be used to steal</a>
+              <ul>
+                <li><a href="weapons">Weapons</a></li>
+                <li><a href="bracelets">Bracelets</a></li>
+                <li><a href="scrolls">Scrolls</a></li>
+                <li><a href="staves">Staves</a></li>
+                <li><a href="pots">Pots</a></li>
+                <li><a href="grass_and_seeds">Grass・Seeds</a></li>
+                <li><a href="traps">Traps</a></li>
+                <li><a href="statues">Statues</a></li>
+                <li><a href="monsters">Monsters</a></li>
+              </ul>
+            </li>
+          </ul>
+          <h3 id="thief_mode">Thief Mode</h3>
+          <p>Text</p>
+          <h3 id="before_stealing">Before Stealing</h3>
+          <p>Text</p>
+          <h3 id="steal_from_a_shop">Steal from a Shop</h3>
+          <p>Text</p>
+          <h3 id="steal_from_a_trader">Steal from a Trader</h3>
+          <p>Text</p>
+          <h3 id="things_that_can_be_used_to_steal">Things that can be used to steal</h3>
+          <p>Text</p>
+          <h4 id="weapons">Weapons</h4>
+          <p>dl</p>
+          <h4 id="bracelets">Bracelets</h4>
+          <p>dl</p>
+          <h4 id="scrolls">Scrolls</h4>
+          <p>dl</p>
+          <h4 id="staves">Staves</h4>
+          <p>dl</p>
+          <h4 id="pots">Pots</h4>
+          <p>dl</p>
+          <h4 id="grass_and_seeds">Grass・Seeds</h4>
+          <p>dl</p>
+          <h4 id="traps">Traps</h4>
+          <p>dl</p>
+          <h4 id="statues">Statues</h4>
+          <p>dl</p>
+          <h4 id="monsters">Monsters</h4>
+          <p>dl</p>
         </div>
       </main>
     </div>
